<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorSmokeWhite">

    <ImageView
        android:id="@+id/ivBack"
        android:src="@drawable/ic_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/almost_there"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack"/>

    <TextView
        android:id="@+id/tvSubTitle"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/complete_the_form_below_to_create_your_ready_to_travel_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <TextView
        android:id="@+id/tvMandatory"
        android:textSize="14sp"
        android:textColor="@color/colorGrey"
        android:text="*Mandatory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitle"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutButtons"
        app:layout_constraintTop_toBottomOf="@id/tvMandatory">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerFirstNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="First Name *"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/vLine1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSmokeWhite"
            app:layout_constraintTop_toBottomOf="@id/containerFirstNameInput" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerLastNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerFirstNameInput">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Last Name *"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/vLine2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSmokeWhite"
            app:layout_constraintTop_toBottomOf="@id/containerLastNameInput" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerEmailAddressInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerLastNameInput">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Email Address *"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/vLine3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSmokeWhite"
            app:layout_constraintTop_toBottomOf="@id/containerEmailAddressInput" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerDOBInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="60dp"
            android:paddingBottom="16dp"
            app:hintEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerEmailAddressInput">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDOB"
                android:clickable="true"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Date of Birth *"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:text="DD/MM/YYYY"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:src="@drawable/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/containerDOBInput"
            app:layout_constraintBottom_toBottomOf="@id/containerDOBInput"
            app:layout_constraintEnd_toEndOf="@id/containerDOBInput"/>

        <RadioGroup
            android:checkedButton="@+id/offer"
            android:id="@+id/toggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_radio_group"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/containerDOBInput"
            app:layout_constraintBottom_toBottomOf="@id/containerDOBInput"
            app:layout_constraintStart_toEndOf="@id/containerDOBInput"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_marginTop="1dp"
                android:checked="true"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:background="@drawable/toggle_widget_backgorund"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:text="Female"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_backgorund"
                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:text="Male"
                android:textColor="@color/black" />

        </RadioGroup>

        <View
            android:id="@+id/vLine4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorSmokeWhite"
            app:layout_constraintStart_toStartOf="@id/containerDOBInput"
            app:layout_constraintEnd_toEndOf="@id/containerDOBInput"
            app:layout_constraintTop_toBottomOf="@id/containerDOBInput" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerNationalityInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerDOBInput">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etNationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:enabled="false"
                android:hint="Nationality *"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:text="Singaporean"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/vLine5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSmokeWhite"
            app:layout_constraintTop_toBottomOf="@id/containerNationalityInput" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerCountryOfResidenceInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerNationalityInput">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etCountryOfResidence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:enabled="false"
                android:hint="Country of Residence *"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:text="Singaporean"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/vLine6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSmokeWhite"
            app:layout_constraintTop_toBottomOf="@id/containerCountryOfResidenceInput" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerMobileNoInput"
            app:prefixTextColor="@color/black"
            app:prefixText="+65"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerCountryOfResidenceInput">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Mobile no. (Optional)"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/vLine7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSmokeWhite"
            app:layout_constraintTop_toBottomOf="@id/containerMobileNoInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:src="@drawable/guitar"
        android:layout_width="100dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="@id/layoutInput"
        app:layout_constraintTop_toTopOf="@id/tvTitle"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnCreateMyAccountNow"
            android:textColor="@color/white"
            android:background="@drawable/bg_cyan_gradient_button"
            android:textStyle="bold"
            android:text="@string/create_my_account_now"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>